# nyx-e2e-chat

./: .gitignore  README.md
backend/: README.md  env.local.example.json  pyproject.toml  requirements.txt  template.yaml
backend/bomber/: README.md  __init__.py  api.py  cli.py  config.py  crypto_sim.py  last-failures.jsonl  main.py  metrics.py  models.py  runner.py  scenario.py  users.seed.4.json  users.seed.json
backend/events/: connect.json  login.json  process_message.json  register_user.json  send_message.json
backend/nyx_e2e_chat_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/: __init__.py
backend/src/bo/: __init__.py  auth_bo.py  connection_bo.py  conversation_bo.py  message_bo.py
backend/src/config/: constants.py  settings.py
backend/src/controllers/: __init__.py  auth_controller.py  conversation_controller.py  message_controller.py  websocket_controller.py
backend/src/functions/: __init__.py
backend/src/functions/lambda/: __init__.py  ack_message_handler.py  connect_handler.py  create_conversation_handler.py  dependencies.py  disconnect_handler.py  fetch_pending_messages_handler.py  fetch_public_key_handler.py  login_handler.py  register_user_handler.py  send_message_handler.py  (+1 more)
backend/src/layers/: __init__.py
backend/src/models/: auth.py  connection.py  conversation.py  enums.py  message.py  user.py
backend/src/utils/: decorators.py  event_parser.py  exceptions.py  idempotency.py  logger.py  request_context.py  response_utils.py  serializers.py
backend/src/validators/: request_validator.py
docs/: architecture.md
(+212 files in other folders)
