[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyx-e2e-chat-backend"
version = "0.1.0"
description = "Secure real-time chat backend built for AWS Lambda, API Gateway WebSocket, SQS and DynamoDB."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.10.0",
  "boto3>=1.34.0",
  "PyJWT>=2.8.0",
  "jsonschema>=4.21.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-mock>=3.14.0",
  "moto[dynamodb,sqs]>=5.0.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
